@@ -19,7 +19,7 @@ import org.elasticsearch.action.admin.indices.dangling.find.NodeFindDanglingInde
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.HandledTransportAction;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
-import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.gateway.LocalAllocateDangledIndices;
@@ -55,11 +55,7 @@ public class TransportImportDanglingIndexAction extends HandledTransportAction<I
     }
 
     @Override
-    protected void doExecute(
-        Task task,
-        ImportDanglingIndexRequest importRequest,
-        ActionListener<AcknowledgedResponse> importListener
-    ) {
+    protected void doExecute(Task task, ImportDanglingIndexRequest importRequest, ActionListener<AcknowledgedResponse> importListener) {
         findDanglingIndex(importRequest, new ActionListener<>() {
             @Override
             public void onResponse(IndexMetadata indexMetaDataToImport) {
@@ -97,7 +93,9 @@ public class TransportImportDanglingIndexAction extends HandledTransportAction<I
 
     private void findDanglingIndex(ImportDanglingIndexRequest request, ActionListener<IndexMetadata> listener) {
         final String indexUUID = request.getIndexUUID();
-        this.nodeClient.execute(FindDanglingIndexAction.INSTANCE, new FindDanglingIndexRequest(indexUUID),
+        this.nodeClient.execute(
+            FindDanglingIndexAction.INSTANCE,
+            new FindDanglingIndexRequest(indexUUID),
             listener.delegateFailure((l, response) -> {
                 if (response.hasFailures()) {
                     final String nodeIds = response.failures().stream().map(FailedNodeException::nodeId).collect(Collectors.joining(","));
@@ -125,11 +123,12 @@ public class TransportImportDanglingIndexAction extends HandledTransportAction<I
 
                 logger.debug(
                     "Metadata versions {} found for index UUID [{}], selecting the highest",
-                    metaDataSortedByVersion.stream().map(IndexMetadata::getVersion).collect(Collectors.toList()),
+                    metaDataSortedByVersion.stream().map(IndexMetadata::getVersion).toList(),
                     indexUUID
                 );
 
                 l.onResponse(metaDataSortedByVersion.get(metaDataSortedByVersion.size() - 1));
-        }));
+            })
+        );
     }
 }
