@@ -12,19 +12,22 @@ import org.elasticsearch.action.support.DefaultShardOperationFailedException;
 import org.elasticsearch.action.support.broadcast.BroadcastResponse;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public final class AnalyzeIndexDiskUsageResponse extends BroadcastResponse {
     private final Map<String, IndexDiskUsageStats> stats;
 
-    AnalyzeIndexDiskUsageResponse(int totalShards, int successfulShards, int failedShards,
-                                  List<DefaultShardOperationFailedException> shardFailures,
-                                  Map<String, IndexDiskUsageStats> stats) {
+    AnalyzeIndexDiskUsageResponse(
+        int totalShards,
+        int successfulShards,
+        int failedShards,
+        List<DefaultShardOperationFailedException> shardFailures,
+        Map<String, IndexDiskUsageStats> stats
+    ) {
         super(totalShards, successfulShards, failedShards, shardFailures);
         this.stats = stats;
     }
@@ -46,9 +49,7 @@ public final class AnalyzeIndexDiskUsageResponse extends BroadcastResponse {
 
     @Override
     protected void addCustomXContentFields(XContentBuilder builder, Params params) throws IOException {
-        final List<Map.Entry<String, IndexDiskUsageStats>> entries = stats.entrySet().stream()
-            .sorted(Map.Entry.comparingByKey())
-            .collect(Collectors.toList());
+        final List<Map.Entry<String, IndexDiskUsageStats>> entries = stats.entrySet().stream().sorted(Map.Entry.comparingByKey()).toList();
         for (Map.Entry<String, IndexDiskUsageStats> entry : entries) {
             builder.startObject(entry.getKey());
             entry.getValue().toXContent(builder, params);
