@@ -13,20 +13,22 @@ import org.elasticsearch.action.admin.indices.create.CreateIndexRequest;
 import org.elasticsearch.action.support.ActiveShardCount;
 import org.elasticsearch.action.support.IndicesOptions;
 import org.elasticsearch.action.support.master.AcknowledgedRequest;
-import org.elasticsearch.common.xcontent.ParseField;
-import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.unit.ByteSizeValue;
+import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.common.xcontent.ObjectParser;
-import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.index.mapper.MapperService;
+import org.elasticsearch.tasks.CancellableTask;
+import org.elasticsearch.tasks.Task;
+import org.elasticsearch.tasks.TaskId;
+import org.elasticsearch.xcontent.ObjectParser;
+import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
-import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.action.ValidateActions.addValidationError;
 
@@ -46,31 +48,49 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
     private static final ParseField MAX_DOCS_CONDITION = new ParseField(MaxDocsCondition.NAME);
     private static final ParseField MAX_SIZE_CONDITION = new ParseField(MaxSizeCondition.NAME);
     private static final ParseField MAX_PRIMARY_SHARD_SIZE_CONDITION = new ParseField(MaxPrimaryShardSizeCondition.NAME);
+    private static final ParseField MAX_PRIMARY_SHARD_DOCS_CONDITION = new ParseField(MaxPrimaryShardDocsCondition.NAME);
 
     static {
-        CONDITION_PARSER.declareString((conditions, s) ->
-                conditions.put(MaxAgeCondition.NAME,
-                    new MaxAgeCondition(TimeValue.parseTimeValue(s, MaxAgeCondition.NAME))),
-            MAX_AGE_CONDITION);
-        CONDITION_PARSER.declareLong((conditions, value) ->
-            conditions.put(MaxDocsCondition.NAME,
-                new MaxDocsCondition(value)), MAX_DOCS_CONDITION);
-        CONDITION_PARSER.declareString((conditions, s) ->
-                conditions.put(MaxSizeCondition.NAME,
-                    new MaxSizeCondition(ByteSizeValue.parseBytesSizeValue(s, MaxSizeCondition.NAME))),
-            MAX_SIZE_CONDITION);
-        CONDITION_PARSER.declareString((conditions, s) ->
-                conditions.put(MaxPrimaryShardSizeCondition.NAME,
-                    new MaxPrimaryShardSizeCondition(ByteSizeValue.parseBytesSizeValue(s, MaxPrimaryShardSizeCondition.NAME))),
-            MAX_PRIMARY_SHARD_SIZE_CONDITION);
+        CONDITION_PARSER.declareString(
+            (conditions, s) -> conditions.put(MaxAgeCondition.NAME, new MaxAgeCondition(TimeValue.parseTimeValue(s, MaxAgeCondition.NAME))),
+            MAX_AGE_CONDITION
+        );
+        CONDITION_PARSER.declareLong(
+            (conditions, value) -> conditions.put(MaxDocsCondition.NAME, new MaxDocsCondition(value)),
+            MAX_DOCS_CONDITION
+        );
+        CONDITION_PARSER.declareString(
+            (conditions, s) -> conditions.put(
+                MaxSizeCondition.NAME,
+                new MaxSizeCondition(ByteSizeValue.parseBytesSizeValue(s, MaxSizeCondition.NAME))
+            ),
+            MAX_SIZE_CONDITION
+        );
+        CONDITION_PARSER.declareString(
+            (conditions, s) -> conditions.put(
+                MaxPrimaryShardSizeCondition.NAME,
+                new MaxPrimaryShardSizeCondition(ByteSizeValue.parseBytesSizeValue(s, MaxPrimaryShardSizeCondition.NAME))
+            ),
+            MAX_PRIMARY_SHARD_SIZE_CONDITION
+        );
+        CONDITION_PARSER.declareLong(
+            (conditions, value) -> conditions.put(MaxPrimaryShardDocsCondition.NAME, new MaxPrimaryShardDocsCondition(value)),
+            MAX_PRIMARY_SHARD_DOCS_CONDITION
+        );
 
-        PARSER.declareField((parser, request, context) -> CONDITION_PARSER.parse(parser, request.conditions, null),
-            CONDITIONS, ObjectParser.ValueType.OBJECT);
-        PARSER.declareField((parser, request, context) -> request.createIndexRequest.settings(parser.map()),
-            CreateIndexRequest.SETTINGS, ObjectParser.ValueType.OBJECT);
+        PARSER.declareField(
+            (parser, request, context) -> CONDITION_PARSER.parse(parser, request.conditions, null),
+            CONDITIONS,
+            ObjectParser.ValueType.OBJECT
+        );
+        PARSER.declareField(
+            (parser, request, context) -> request.createIndexRequest.settings(parser.map()),
+            CreateIndexRequest.SETTINGS,
+            ObjectParser.ValueType.OBJECT
+        );
         PARSER.declareField((parser, request, includeTypeName) -> {
             if (includeTypeName) {
-                //expecting one type only
+                // expecting one type only
                 for (Map.Entry<String, Object> mappingsEntry : parser.map().entrySet()) {
                     @SuppressWarnings("unchecked")
                     final Map<String, Object> value = (Map<String, Object>) mappingsEntry.getValue();
@@ -80,8 +100,12 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
                 // a type is not included, add a dummy _doc type
                 Map<String, Object> mappings = parser.map();
                 if (MapperService.isMappingSourceTyped(MapperService.SINGLE_MAPPING_NAME, mappings)) {
-                    throw new IllegalArgumentException("The mapping definition cannot be nested under a type " +
-                        "[" + MapperService.SINGLE_MAPPING_NAME + "] unless include_type_name is set to true.");
+                    throw new IllegalArgumentException(
+                        "The mapping definition cannot be nested under a type "
+                            + "["
+                            + MapperService.SINGLE_MAPPING_NAME
+                            + "] unless include_type_name is set to true."
+                    );
                 }
                 request.createIndexRequest.mapping(mappings);
             }
@@ -96,15 +120,18 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
             request.createIndexRequest.mapping(mappings);
         }, CreateIndexRequest.MAPPINGS.forRestApiVersion(RestApiVersion.onOrAfter(RestApiVersion.V_8)), ObjectParser.ValueType.OBJECT);
 
-        PARSER.declareField((parser, request, context) -> request.createIndexRequest.aliases(parser.map()),
-            CreateIndexRequest.ALIASES, ObjectParser.ValueType.OBJECT);
+        PARSER.declareField(
+            (parser, request, context) -> request.createIndexRequest.aliases(parser.map()),
+            CreateIndexRequest.ALIASES,
+            ObjectParser.ValueType.OBJECT
+        );
     }
 
     private String rolloverTarget;
     private String newIndexName;
     private boolean dryRun;
-    private final Map<String, Condition<?>> conditions = new HashMap<>(2);
-    //the index name "_na_" is never read back, what matters are settings, mappings and aliases
+    private final Map<String, Condition<?>> conditions = Maps.newMapWithExpectedSize(2);
+    // the index name "_na_" is never read back, what matters are settings, mappings and aliases
     private CreateIndexRequest createIndexRequest = new CreateIndexRequest("_na_");
 
     public RolloverRequest(StreamInput in) throws IOException {
@@ -143,14 +170,15 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
         out.writeOptionalString(newIndexName);
         out.writeBoolean(dryRun);
         out.writeCollection(
-            conditions.values().stream().filter(c -> c.includedInVersion(out.getVersion())).collect(Collectors.toList()),
-            StreamOutput::writeNamedWriteable);
+            conditions.values().stream().filter(c -> c.includedInVersion(out.getVersion())).toList(),
+            StreamOutput::writeNamedWriteable
+        );
         createIndexRequest.writeTo(out);
     }
 
     @Override
     public String[] indices() {
-        return new String[] {rolloverTarget};
+        return new String[] { rolloverTarget };
     }
 
     @Override
@@ -235,6 +263,17 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
         this.conditions.put(maxPrimaryShardSizeCondition.name, maxPrimaryShardSizeCondition);
     }
 
+    /**
+     * Adds a size-based condition to check if the docs of the largest primary shard has at least <code>numDocs</code>
+     */
+    public void addMaxPrimaryShardDocsCondition(long numDocs) {
+        MaxPrimaryShardDocsCondition maxPrimaryShardDocsCondition = new MaxPrimaryShardDocsCondition(numDocs);
+        if (this.conditions.containsKey(maxPrimaryShardDocsCondition.name)) {
+            throw new IllegalArgumentException(maxPrimaryShardDocsCondition.name + " condition is already set");
+        }
+        this.conditions.put(maxPrimaryShardDocsCondition.name, maxPrimaryShardDocsCondition);
+    }
+
     public boolean isDryRun() {
         return dryRun;
     }
@@ -261,5 +300,10 @@ public class RolloverRequest extends AcknowledgedRequest<RolloverRequest> implem
     // param isTypeIncluded decides how mappings should be parsed from XContent
     public void fromXContent(boolean isTypeIncluded, XContentParser parser) throws IOException {
         PARSER.parse(parser, this, isTypeIncluded);
+    }
+
+    @Override
+    public Task createTask(long id, String type, String action, TaskId parentTaskId, Map<String, String> headers) {
+        return new CancellableTask(id, type, action, "", parentTaskId, headers);
     }
 }
