@@ -25,7 +25,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 public class GetIndexResponseTests extends AbstractWireSerializingTestCase<GetIndexResponse> {
 
@@ -33,8 +32,6 @@ public class GetIndexResponseTests extends AbstractWireSerializingTestCase<GetIn
     protected Writeable.Reader<GetIndexResponse> instanceReader() {
         return GetIndexResponse::new;
     }
-
-
 
     @Override
     protected GetIndexResponse createTestInstance() {
@@ -52,8 +49,10 @@ public class GetIndexResponseTests extends AbstractWireSerializingTestCase<GetIn
             List<AliasMetadata> aliasMetadataList = new ArrayList<>();
             int aliasesNum = randomIntBetween(0, 3);
             for (int i = 0; i < aliasesNum; i++) {
-                aliasMetadataList.add(GetAliasesResponseTests.createAliasMetadata(
-                    s -> aliasMetadataList.stream().map(AliasMetadata::alias).collect(Collectors.toList()).contains(s))
+                aliasMetadataList.add(
+                    GetAliasesResponseTests.createAliasMetadata(
+                        s -> aliasMetadataList.stream().map(AliasMetadata::alias).toList().contains(s)
+                    )
                 );
             }
             CollectionUtil.timSort(aliasMetadataList, Comparator.comparing(AliasMetadata::alias));
@@ -72,7 +71,12 @@ public class GetIndexResponseTests extends AbstractWireSerializingTestCase<GetIn
             }
         }
         return new GetIndexResponse(
-            indices, mappings.build(), aliases.build(), settings.build(), defaultSettings.build(), dataStreams.build()
+            indices,
+            mappings.build(),
+            aliases.build(),
+            settings.build(),
+            defaultSettings.build(),
+            dataStreams.build()
         );
     }
 }
