@@ -8,15 +8,14 @@
 
 package org.elasticsearch.index.seqno;
 
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
 
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.Matchers.contains;
@@ -30,16 +29,18 @@ public class RetentionLeasesTests extends ESTestCase {
     public void testPrimaryTermOutOfRange() {
         final long primaryTerm = randomLongBetween(Long.MIN_VALUE, 0);
         final IllegalArgumentException e = expectThrows(
-                IllegalArgumentException.class,
-                () -> new RetentionLeases(primaryTerm, randomNonNegativeLong(), Collections.emptyList()));
+            IllegalArgumentException.class,
+            () -> new RetentionLeases(primaryTerm, randomNonNegativeLong(), Collections.emptyList())
+        );
         assertThat(e, hasToString(containsString("primary term must be positive but was [" + primaryTerm + "]")));
     }
 
     public void testVersionOutOfRange() {
         final long version = randomLongBetween(Long.MIN_VALUE, -1);
         final IllegalArgumentException e = expectThrows(
-                IllegalArgumentException.class,
-                () -> new RetentionLeases(randomLongBetween(1, Long.MAX_VALUE), version, Collections.emptyList()));
+            IllegalArgumentException.class,
+            () -> new RetentionLeases(randomLongBetween(1, Long.MAX_VALUE), version, Collections.emptyList())
+        );
         assertThat(e, hasToString(containsString("version must be non-negative but was [" + version + "]")));
     }
 
@@ -70,11 +71,13 @@ public class RetentionLeasesTests extends ESTestCase {
         final RetentionLeases retentionLeases = randomRetentionLeases(false);
         final RetentionLease retentionLease = randomFrom(retentionLeases.leases());
         final IllegalStateException e = expectThrows(
-                IllegalStateException.class,
-                () -> new RetentionLeases(
-                        retentionLeases.primaryTerm(),
-                        retentionLeases.version(),
-                        Stream.concat(retentionLeases.leases().stream(), Stream.of(retentionLease)).collect(Collectors.toList())));
+            IllegalStateException.class,
+            () -> new RetentionLeases(
+                retentionLeases.primaryTerm(),
+                retentionLeases.version(),
+                Stream.concat(retentionLeases.leases().stream(), Stream.of(retentionLease)).toList()
+            )
+        );
         assertThat(e, hasToString(containsString("duplicate retention lease ID [" + retentionLease.id() + "]")));
     }
 
